--- a/myapp/src/Components/carousel.css
+++ b/myapp/src/Components/carousel.css
@@ -1,12 +1,12 @@
 .carou img{
-    width: 100%;
+    height: 100%;
 }
 
 .carou{
-    width: 70vw;
+    width: 60vw;
 }
 
 .carou div{
-    height: 876px;
+    height: 877px;
     overflow: hidden;
 }
