--- a/myapp/src/Components/carousel.css
+++ b/myapp/src/Components/carousel.css
@@ -4,10 +4,25 @@
 }
 
 .carou{
-    width: 60vw;
+    width: 1200px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .carou div{
     height: 877px;
     overflow: hidden;
+}
+
+.progress{
+    display: block;
+    height: 100px;
+    width: 100px; 
+    stroke: #fff;
+    stroke-width: 2px;
+    stroke-dashoffset: 500px;
+    stroke-dasharray: 500px;
+    border-radius: 50%;
 }
