--- a/myapp/src/Components/carousel.css
+++ b/myapp/src/Components/carousel.css
@@ -4,7 +4,7 @@
 }
 
 .carou{
-    width: 1200px;
+    width: 60vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -12,7 +12,7 @@
 }
 
 .carou div{
-    height: 877px;
+    height: 89vh;
     overflow: hidden;
 }
 
