--- a/myapp/src/Pages/tables.css
+++ b/myapp/src/Pages/tables.css
@@ -4,8 +4,7 @@
     height: 89vh;
     width: 100vw;
     align-items: center;
-    justify-content: center;
-
+    justify-content: space-evenly;
 }
 
 .tables section ul{
@@ -30,4 +29,28 @@
     width: 25%;
     font-size: 1.3rem;
     padding: 10px;
+}
+
+.tables div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+    overflow: hidden;
+    border: 2px solid gold;
+    padding: 0;
+}
+
+.tables div button{
+    background-color: transparent;
+    border: none;
+    padding: 10px 30px;
+    font-size: 1.3rem;
+    transition: all .5s ease;
+}
+
+.tables div button:hover{
+    background-color: rgba(255, 217, 0, 0.16);
+    cursor: pointer;
 }
