--- a/myapp/src/Pages/tables.css
+++ b/myapp/src/Pages/tables.css
@@ -1,10 +1,14 @@
 .tables{
     display: flex;
     flex-direction: column;
-    height: 89vh;
-    width: 100vw;
+    width: 85vw;
     align-items: center;
     justify-content: space-evenly;
+    margin: 100px 40px;
+}
+
+.tables section:nth-child(2){
+    margin-bottom: 50px;
 }
 
 .tables section ul{
@@ -12,7 +16,6 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    gap: 10px;
     width: 80vw;
 }
 
@@ -33,18 +36,23 @@
 
 .tables div{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    border-radius: 100px;
+    border-radius: 10px;
     overflow: hidden;
     border: 2px solid gold;
     padding: 0;
+
+    position: fixed;
+    right: 75px;
+    top: 30%;
 }
 
 .tables div button{
     background-color: transparent;
     border: none;
+    width: 100%;
     padding: 10px 30px;
     font-size: 1.3rem;
     transition: all .5s ease;
