--- a/myapp/src/Pages/tables.css
+++ b/myapp/src/Pages/tables.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     width: 80vw;
 }
 
@@ -23,13 +23,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: flex-start;
 }
 
 .tables section ul li{
     text-align: left;
     list-style-type: none;
-    width: 25%;
+    width: 250px;
     font-size: 1.3rem;
     padding: 10px;
 }
