--- a/myapp/src/Pages/tables.css
+++ b/myapp/src/Pages/tables.css
@@ -65,5 +65,7 @@
 
 .tables div button:focus{
     background-color: gold;
+    box-shadow: 0px 0px 10px rgba(255, 217, 0, 1),
+                0px 0px 30px rgba(255, 217, 0, 0.323);
     color: #202020;
 }
